Project laboratory_management_mvp {
  database_type: "MySQL"
  Note: '''
  MVP de panel administrativo para gestión de laboratorio.
  Arquitectura prevista: Laravel API + React Admin + JWT.
  Nota de dominio:
  - Una muestra pertenece a un proyecto.
  - Un proyecto pertenece a un cliente.
  - NO duplicar client_id en samples.
  - "urgent" es priority, no status.
  '''
}

Enum project_status {
  active
  completed
  on_hold
  archived
}

Enum sample_status {
  pending
  in_progress
  completed
  cancelled
}

Enum sample_priority {
  standard
  urgent
}

Enum sample_event_type {
  created
  updated
  analysis_started
  priority_changed
  status_changed
  result_added
  completed
  deleted
  restored
}

Table users {
  id bigint [pk, increment]
  name varchar(255)
  email varchar(255) [not null, unique]
  password varchar(255) [not null]
  is_active boolean [not null, default: true]
  email_verified_at timestamp [null]
  created_at timestamp [null]
  updated_at timestamp [null]

  Note: 'Usuario del sistema. La asignación de roles se hará con Spatie.'
}

Table clients {
  id bigint [pk, increment]
  name varchar(255) [not null, unique]
  contact_email varchar(255) [null]
  contact_phone varchar(50) [null]
  location varchar(255) [null]
  created_by bigint [null]
  updated_by bigint [null]
  created_at timestamp [null]
  updated_at timestamp [null]
  deleted_at timestamp [null]

  Note: 'Organización cliente. Active Projects y Total Samples son métricas calculadas.'
}

Table projects {
  id bigint [pk, increment]
  client_id bigint [not null]
  name varchar(255) [not null]
  status project_status [not null, default: 'active']
  started_at date [not null]
  ended_at date [null]
  description text [null]
  created_by bigint [null]
  updated_by bigint [null]
  created_at timestamp [null]
  updated_at timestamp [null]
  deleted_at timestamp [null]

  indexes {
    (client_id)
    (status)
    (started_at)
    (client_id, status)
  }

  Note: 'Proyecto de investigación. Total Samples se calcula por relación.'
}

Table samples {
  id bigint [pk, increment]
  project_id bigint [not null]
  code varchar(100) [not null, unique]
  status sample_status [not null, default: 'pending']
  priority sample_priority [not null, default: 'standard']
  received_at date [not null]
  analysis_started_at timestamp [null]
  completed_at timestamp [null]
  notes text [null]
  created_by bigint [null]
  updated_by bigint [null]
  created_at timestamp [null]
  updated_at timestamp [null]
  deleted_at timestamp [null]

  indexes {
    (project_id)
    (status)
    (priority)
    (received_at)
    (project_id, status)
    (project_id, priority)
  }

  Note: '''
  La muestra pertenece al proyecto.
  El cliente se obtiene por samples.project_id -> projects.client_id.
  El badge rojo "Urgent" en UI representa priority=urgent, no status.
  '''
}

Table sample_results {
  id bigint [pk, increment]
  sample_id bigint [not null]
  analyst_id bigint [not null]
  result_summary text [null]
  result_data json [null]
  created_at timestamp [null]
  updated_at timestamp [null]

  indexes {
    (sample_id)
    (analyst_id)
  }

  Note: 'Resultados asociados a una muestra. Para MVP puede manejarse como 1..N aunque normalmente se consulte el más reciente.'
}

Table sample_events {
  id bigint [pk, increment]
  sample_id bigint [not null]
  user_id bigint [null]
  event_type sample_event_type [not null]
  description varchar(255) [null]
  old_status sample_status [null]
  new_status sample_status [null]
  old_priority sample_priority [null]
  new_priority sample_priority [null]
  metadata json [null]
  created_at timestamp [null]

  indexes {
    (sample_id)
    (user_id)
    (event_type)
    (created_at)
    (sample_id, created_at)
  }

  Note: '''
  Bitácora de eventos de muestras.
  Alimenta Recent Activity y trazabilidad básica.
  '''
}

Table user_preferences {
  id bigint [pk, increment]
  user_id bigint [not null, unique]
  notify_urgent_sample_alerts boolean [not null, default: true]
  notify_sample_completion boolean [not null, default: true]
  notify_daily_activity_digest boolean [not null, default: false]
  notify_project_updates boolean [not null, default: true]
  created_at timestamp [null]
  updated_at timestamp [null]

  Note: 'Preferencias del bloque Settings > Notifications.'
}

Ref: clients.created_by > users.id [delete: set null]
Ref: clients.updated_by > users.id [delete: set null]

Ref: projects.client_id > clients.id [delete: restrict]
Ref: projects.created_by > users.id [delete: set null]
Ref: projects.updated_by > users.id [delete: set null]

Ref: samples.project_id > projects.id [delete: restrict]
Ref: samples.created_by > users.id [delete: set null]
Ref: samples.updated_by > users.id [delete: set null]

Ref: sample_results.sample_id > samples.id [delete: cascade]
Ref: sample_results.analyst_id > users.id [delete: restrict]

Ref: sample_events.sample_id > samples.id [delete: cascade]
Ref: sample_events.user_id > users.id [delete: set null]

Ref: user_preferences.user_id > users.id [delete: cascade]
